# ecom_tech

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  main.py
app/routers/: grades.py  students.py
scripts/: init.sql
